<resources>
    <string name="app_name">Burned Calories Calculator</string>

    <string name="action_settings">Settings</string>
    <string name="nameHint">Name Here!!</string>
    <string name="runQuestion">How many miles did you run?</string>
    <string name="workoutInfo">Workout info</string>
    <string name="inches">Inches</string>
    <string name="feet">Feet</string>
    <string name="currentWeight">What is your Weight?</string>
    <string name="tallareyou">How tall are you?</string>
    <string name="pounds">In Pounds</string>
    <string name="personal">Personal Questions:</string>
    <string name="miles">5 miles</string>
    <string name="currentBMI">Current BMI</string>
    <string name="defaultCalories">412.5</string>

    <string-array name="feetSpinner">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="inchSpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
